<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Greenhouse</string>
    <string name="app_version">Version</string>
    <string name="app_version_number">0.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="sensor_icon_descp">Sensor icon</string>
    <string name="credits">By I. Díez</string>
    <string name="repo">Code at GitHub</string>
    <string name="repo_link"><a href="https://github.com/7flying/greenhouse">7flying/greenhouse</a>
    </string>
    <!-- Tab names -->
    <string name="tab_status">Status</string>
    <string name="tab_sensors">Sensors</string>
    <string name="tab_alerts">Alerts</string>
    <string name="tab_actuators">Actuators</string>
    <!-- Sensor info -->
    <string name="action_bar_sensor_info">Sensor</string>
    <!-- Display title names -->
    <string name="title_add_item">Add item</string>
    <string name="title_edit_item">Edit item</string>
    <string name="title_add_alert">Add alert</string>
    <string name="title_edit_alert">Edit alert</string>
    <string name="title_sensor_status">Sensor\'s info</string>
    <string name="title_sensor_creation">Create sensor</string>
    <string name="title_sensor_edition">Edit sensor</string>
    <string name="title_item_status">Item\'s info</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_add_actuator">Add actuator</string>
    <string name="title_edit_actuator">Edit actuator</string>
    <string name="title_actuator_info">Actuator\'s info</string>
    <!-- xmls layout-->
    <!-- activity_sensor_status-->
    <string name="content_image_sensor_desc">Sensor image</string>
    <string name="xml_sensor_updated_word">Updated:</string>
    <string name="xml_sensor_name">Name:</string>
    <string name="xml_sensor_type">Type:</string>
    <string name="xml_sensor_sensor_word">sensor</string>
    <string name="xml_sensor_pin">PIN:</string>
    <string name="xml_sensor_refresh_rate">Refresh rate:</string>
    <string name="xml_sensor_seconds_word">secs</string>
    <string name="xml_sensor_power_saving">Power saving mode:</string>
    <string name="no_historical_data">There isn\'t historical data yet</string>
    <string name="defaults_no_data">No data</string>
    <string name="defaults_active">Active</string>
    <string name="defaults_disabled">Disabled</string>
    <string name="enable_power_saving">Activate</string>
    <string name="disable_power_saving">Deactivate</string>
    <!-- fragment_sensor_list-->
    <string name="no_sensors">There aren\'t any sensors, try to add one!</string>
    <string name="no_connection">No connection</string>
    <!-- activity_alert_creation-->
    <string name="select_sensor_spinner">Sensor</string>
    <string name="alert_type_spinner">Alert type</string>
    <string name="alert_fired_on_value">Value</string>
    <string name="button_save">Save</string>
    <string name="button_cancel_alarm_creation_delete">Cancel</string>
    <string name="alert_repeated_notification">You cannot create two alerts of the same type on the
    same sensor.\nPlease edit or delete the alert.</string>
    <string name="add_alert">ADD ALERT</string>
    <string name="edit_alert">EDIT ALERT</string>
    <!-- fragment_alert_list -->
    <string name="no_alerts">There aren\'t any alerts, try to add one!</string>
    <!-- fragment_status -->
    <string name="no_moni_item">You can add an item!</string>
    <string name="monitoring_items">MONITORING ITEMS</string>
    <string name="add_item">Add item</string>
    <string name="actuators">ACTUATORS</string>
    <string name="item">Item</string>
    <!-- actuator_row -->
    <string name="launch">Launch</string>
    <!-- activity_mon_item_status -->
    <string name="attached_sensors">ATTACHED SENSORS</string>
    <!-- activity_mon_item_creation -->
    <string name="add_monitoring_item">ADD MONITORING ITEM</string>
    <string name="edit_monitoring_item">EDIT MONITORING ITEM</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="from_camera">Take photo</string>
    <string name="from_gallery">Choose from gallery</string>
    <string name="from_default">Default icon</string>
    <string name="add_sensors">SELECT RELATED SENSORS</string>
    <!-- activity sensor creation -->
    <string name="sensor_creation">CREATE SENSOR</string>
    <string name="sensor_edition">EDIT SENSOR</string>
    <string name="radio_analog">Analog</string>
    <string name="radio_digital">Digital</string>
    <string name="pin">PIN</string>
    <string name="sensor_type">Sensor type</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="refresh_rate_seconds">Refresh rate (seconds)</string>
    <string name="ensure_refresh">Ensure refresh rate?</string>
    <string name="yes">Yes, please</string>
    <string name="no">Nope, don\'t worry</string>
    <!-- actuators general -->
    <string name="no_actuators">There aren\'t any actuators, try to add one!</string>
    <string name="actuator">Actuator</string>
    <string name="actuator_created">Actuator created.</string>
    <string name="actuator_error_create">Error creating the actuator.</string>
    <string name="actuator_deleted">Actuator deleted.</string>
    <string name="actuator_error_delete">Error deleting the actuator.</string>
    <string name="actuator_modified">Actuator modified.</string>
    <string name="actuator_error_modify">Error modifying the actuator.</string>
    <!-- activity actuator status -->
    <string name="control_sensor">Control sensor</string>
    <!-- activity actuator creation -->
    <string name="add_control_sensor">Add a control sensor?</string>
    <string name="control_type">Control type</string>
    <string name="control_value">Control value</string>
    <!-- Main activity -->
    <string name="alert_creation_no">There isn\'t any sensor to attach the alert,
        please create a new sensor first.</string>
    <string name="alert_no_server_conn">We cannot establish a connection to the server, please
        try again later.</string>
    <!-- xmls menu-->
    <string name="action_new">New</string>
    <string name="action_refresh">Refresh</string>
    <string name="edit_alert_context_menu">Edit</string>
    <string name="delete_alert_context_menu">Delete</string>
    <string name="what_to_add">What to add?</string>
    <!-- Notifications & errors-->
    <string name="logic_alert_on_sensor">Alert on sensor</string>
    <string name="error_duplicated_sensor">Error, this sensor is duplicated. Please delete the
        old one.</string>
    <string name="error_internal_server">Error creating sensor.</string>
    <string name="error_incorrect_params">Error, not enough data.</string>
    <!-- Toasts -->
    <string name="alert_created">Alert created.</string>
    <string name="alert_edited">Alert edited.</string>
    <string name="alert_deleted">Alert deleted.</string>
    <string name="item_created">Item created.</string>
    <string name="item_deleted">Item deleted.</string>
    <string name="item_edited">Item edited.</string>
    <string name="sensor_created">Sensor created.</string>
    <string name="sensor_creation_error">Error creating the sensor.</string>
    <string name="sensor_modified">Sensor edited.</string>
    <string name="sensor_modif_error">Error modifying the sensor.</string>
    <string name="actuator_launched">Actuator launched!</string>
    <string name="actuator_launch_error">Error launching the actuator.</string>
    <string name="sensor_power_save_on">Power saving mode enabled.</string>
    <string name="sensor_power_save_off">Power saving mode disabled.</string>
    <string name="sensor_power_save_error">Error changing the power saving mode.</string>
    <string name="error_retrieving_power_save_mode">Error retrieving the power saving mode.</string>
    <!-- General -->
    <string name="string_alert">Alert</string>
    <string name="ok">"Ok"</string>
    <string name="content_description_image">Image</string>
    <string name="name">Name</string>
    <!-- Action bar general-->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_alert">New alert</string>
    <string name="action_new_sensor">New sensor</string>
    <string name="action_add_item">Add item</string>
    <string name="sensor">Sensor</string>
    <string name="sensor_deleted">Sensor deleted.</string>
    <string name="sensor_error_delete">Error deleting sensor.</string>
    <!-- Settings -->
    <string name="prefs_server">Server setup</string>
    <string name="prefs_serverip">Host</string>
    <string name="prefs_insert_server_ip">Insert server\'s ip</string>
    <string name="prefs_serverport">Port</string>
    <string name="prefs_insert_server_port">Insert server\'s port</string>
    <string name="prefs_server_ip_default">192.168.1.57</string>
    <string name="prefs_server_port_default">5432</string>
    <!-- Sensor types-->
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="pressure">Pressure</string>
    <string name="steam">Steam</string>
</resources>
