<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Name -->
            <EditText
                android:id="@+id/et_moni_name"
                android:hint="@string/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical" />
            <!-- icon/picture -->
            <TextView
                android:id="@+id/title_add_image"
                android:text="@string/add_image"
                android:textColor="@color/bright_foreground_inverse_material_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"/>
            <View
                android:id="@+id/separator_add_image"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#333333"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/content_description_image"/>
                <TableLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:layout_toEndOf="@+id/image_preview"
                    android:layout_toRightOf="@+id/image_preview">
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="1dp">
                        <Button
                            android:id="@+id/button_take_photo"
                            android:drawableLeft="@drawable/ic_action_camera"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/content_description_image"
                            android:textSize="15dp"
                            android:text="@string/from_camera"
                            android:layout_weight="1"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="1dp">
                        <Button
                            android:id="@+id/button_leave_default"
                            android:drawableLeft="@drawable/ic_action_picture"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/content_description_image"
                            android:textSize="15dp"
                            android:text="@string/from_default"
                            android:layout_weight="1"/>
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <!-- Related sensors -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/title_add_sensors"
            android:text="@string/add_sensors"
            android:textColor="@color/bright_foreground_inverse_material_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"/>
        <View
            android:id="@+id/separator_add_sensors"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#333333"/>
        <ListView
            android:id="@+id/list_check_sensors"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/button_create"
            android:textColor="@color/switch_thumb_normal_material_dark"
            android:text="@string/button_save"
            android:background="@color/material_deep_teal_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
