<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- name -->
            <EditText
                android:id="@+id/et_name"
                android:textSize="14dp"
                android:hint="@string/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <!-- pin -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/pin"
                    android:textColor="@color/bright_foreground_inverse_material_dark"
                    android:paddingLeft="5dp"
                    android:clickable="false"/>
                <EditText
                    android:id="@+id/et_pin_number"
                    android:hint="@string/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:inputType="number"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <!-- control sensor? -->
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textSize="15dp"
                android:textColor="@color/bright_foreground_inverse_material_dark"
                android:text="@string/add_control_sensor"/>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:paddingLeft="10dp">
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_yes"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/yes"
                    android:checked="true"/>
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </RadioGroup>
            <LinearLayout
                android:id="@+id/layout_optional_control_sensor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp">
                <!-- Sensor choose -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/bright_foreground_inverse_material_dark"
                        android:text="@string/sensor"
                        android:clickable="false" />
                    <Spinner
                        android:id="@+id/sensor_chooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <!-- control type -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/bright_foreground_inverse_material_dark"
                        android:text="@string/control_type"
                        android:clickable="false" />
                    <Spinner
                        android:id="@+id/sensort_type_chooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <!-- control value -->
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:text="@string/control_value"
                        android:textColor="@color/bright_foreground_inverse_material_dark"
                        android:clickable="false"/>
                    <EditText
                        android:id="@+id/et_control_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:inputType="number"
                        android:gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/button_create_actuator"
            android:textColor="@color/switch_thumb_normal_material_dark"
            android:text="@string/button_save"
            android:background="@color/material_deep_teal_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>